@@ -17,9 +17,13 @@ import joshie.progression.helpers.EntityHelper;
 import joshie.progression.helpers.PlayerHelper;
 import joshie.progression.helpers.StackHelper;
 import joshie.progression.lib.WorldLocation;
+import net.minecraft.entity.EntityList;
+import net.minecraft.entity.EntityLiving;
 import net.minecraft.entity.EntityLivingBase;
+import net.minecraft.entity.IEntityLivingData;
 import net.minecraft.entity.player.EntityPlayerMP;
 import net.minecraft.nbt.NBTTagCompound;
+import net.minecraft.util.BlockPos;
 
 public class RewardSpawnEntity extends RewardBase implements ISpecialFieldProvider, ISpecialFilters, ISetterCallback {
     public List<IFilter> locations = new ArrayList();
@@ -27,6 +31,7 @@ public class RewardSpawnEntity extends RewardBase implements ISpecialFieldProvid
     public NBTTagCompound tagValue = new NBTTagCompound();
     public String tagText = "";
     public int spawnNumber = 1;
+    public boolean armour = true;
 
     public RewardSpawnEntity() {
         super("entity", 0xFFE599FF);
@@ -46,16 +51,23 @@ public class RewardSpawnEntity extends RewardBase implements ISpecialFieldProvid
                     ArrayList<IFilter> locality = new ArrayList(locations);
                     if (locality.size() > 0) {
                         Collections.shuffle(locality);
-                        WorldLocation location = (WorldLocation) locality.get(0);
+                        WorldLocation location = (WorldLocation) locality.get(0).getMatches(player).get(0);
                         //Now that we have a random location, let's grab a random Entity
                         EntityLivingBase entity = EntityHelper.getRandomEntityForFilters(entities);
-                        //EntityLivingBase clone = EntityList.createEntityByName(entityName, worldIn)
+                        EntityLivingBase clone = (EntityLivingBase) EntityList.createEntityByName(EntityHelper.getNameForEntity(entity), player.worldObj);
+                        if (clone instanceof EntityLiving) {
+                            System.out.println("DOING THE SPAWN STUFF");
+                            ((EntityLiving) clone).onInitialSpawn(player.worldObj.getDifficultyForLocation(new BlockPos(clone)), (IEntityLivingData) null);
+                        }
+
+                        clone.setLocationAndAngles(location.pos.getX(), location.pos.getY(), location.pos.getZ(), player.worldObj.rand.nextFloat() * 360.0F, 0.0F);
+                        player.worldObj.spawnEntityInWorld(clone);
+                        player.worldObj.playAuxSFX(2004, location.pos, 0);
+                        if (clone instanceof EntityLiving) {
+                            ((EntityLiving) clone).spawnExplosionParticle();
+                        }
                     }
                 }
-
-                // ItemStack stack = ItemHelper.getRandomItemOfSize(filters, stackSize);
-                //PacketHandler.sendToClient(new PacketRewardItem(stack.copy()), (EntityPlayerMP) player);
-                //SpawnItemHelper.addToPlayerInventory(player, stack.copy());
             }
         }
     }
@@ -82,7 +94,7 @@ public class RewardSpawnEntity extends RewardBase implements ISpecialFieldProvid
             tagText = fieldValue; //Temporary fieldr
             return true;
         }
-        
+
         return false;
     }
 }
