@@ -9,6 +9,7 @@ Progression 0.5.0
   Added Has Potion Effect Condition
   Added Has True/False Condition
   Added Has Points Condition
+  Added Spawn Entity Reward
   Added Teleport Player Reward
   Added Place Block Reward
   Added Potion Effect Reward
